<resources>
    <string name="app_name">Moneygement</string>

    <string name="NickName">ニックネーム</string>
    <string name="Name">名前</string>
    <string name="eMail">メールアドレス</string>
    <string name="Member">会員登録</string>
    <string name="Nameview">Ｔａｒｏ</string>
    <string name="Name2">名前</string>
    <string name="NickName2">ニックネーム</string>
    <string name="password">パスワード</string>
    <string name="Reverse">戻る</string>
    <string name="NickName3">ニックネーム</string>
    <string name="NickName4">ニックネーム</string>

    <string name="Nameview2">麻生　太郎</string>
    <string name="Nameview3">名前</string>
    <string name="Nameview4">ニックネーム</string>
    <string name="Nameview5">メールアドレス</string>
    <string name="NameView6">*******@s.asojuku.ac.jp</string>
    <string name="Nameview7">貯金額</string>
    <string name="Nameview8">￥10,800</string>
    <string name="Nameview9">目標貯金額</string>
    <string name="Nameview10">Taro0204</string>
    <string name="Login">ログイン</string>
    <string name="id">会員ID</string>

    <string name="returntop">トップ画面へ</string>
    <string name="date">年　月　日</string>
    <string name="cancel">キャンセル</string>
    <string name="save">保存</string>
    <string name="saving">金額</string>
    <string name="Amountofmoney">金額</string>
    <string name="receipt">レシート</string>
    <string name="memo">メモ</string>
    <string name="tocontinue">続けて記入</string>
    <string name="spendingRegistration">支出登録</string>
    <string name="spending">支出</string>
    <string name="Savingamountregistration">貯金額登録</string>
    <string name="savingshistory">貯金履歴</string>
    <string name="january">2020年　1月</string>
    <string name="month">年　月</string>
    <string name="amountamount">+500円</string>

    <string name="InputHouseholdAccountBook">家計簿登録</string>
    <string name="Spendingamount">今日の支出額</string>
    <string name="nameyen">￥1,400</string>
    <string name="amountamount5">￥1.500</string>
    <string name="Spending">支出</string>
    <string name="NameviewName">太郎</string>
    <string name="NameviewSur">麻生</string>
    <string name="name">名</string>
    <string name="surname">姓</string>
    <string name="confirmpassword">確認用パスワード</string>
    <string name="hint" />
    <string name="Nameview11">麻生　花子</string>

    <string name="Logoutbtn">ログアウト</string>
    <string name="yesbtn">はい</string>
    <string name="nobtn">いいえ</string>
    <string name="householdaccountbook">家計簿登録</string>
    <string name="totalassets">総資産額</string>
    <string name="Incomeamount">収入額</string>
    <string name="spendingamount">支出額</string>
    <string name="householdaccountbookamount">支出：1,000</string>
    <string name="householdaccountbookIncome">収入：3,000</string>
    <string-array name="list">
        <item>家計簿1</item>
        <item>家計簿2</item>
        <item>家計簿4</item>
        <item>家計簿3</item>
    </string-array>
    <string name="Nameview12">￥20,000</string>
    <string name="change">変更</string>

    <string-array name="spinnerlist">
        <item>給料</item>
        <item>お小遣い</item>
        <item>仕送り</item>
        <item>年金</item>
        <item>その他</item>
    </string-array>
    <string-array name="Expenselist">
        <item>食費</item>
        <item>家賃</item>
        <item>水道光熱費</item>
        <item>交通費</item>
        <item>通信料</item>
        <item>医療費</item>
        <item>日用品</item>
        <item>ファッション</item>
        <item>美容</item>
        <item>趣味</item>
        <item>旅費</item>
        <item>その他</item>
    </string-array>
    <string name="category">家計簿</string>

    <string name="貯金額">目標貯金額</string>
    <string name="現在の貯金額">現在の貯金額</string>
    <string name="targetamount">¥0000</string>
    <string name="savingAmount">¥0000</string>
    <string name="income">収入</string>
    <string name="graph">グラフ</string>

    <string name="signin">Sign in</string>
    <string name="loginid">id</string>
    <string name="loginpassword">password</string>
    <string name="loginbtn">login</string>
    <string name="signup">新規登録</string>

    <string name="advisordetail">アドバイザ詳細</string>
    <string name="regist">登録</string>
    <string name="release">解除</string>
    <string name="selfintroduction"></string>
    <string name="url">https://moneygement.com/index</string>

    <string name="introduction">アドバイザ機能紹介</string>
    <string name="Explanation">1.アドバイザを選択</string>
    <string name="Explanation2">2.アドバイザと家計簿を共有</string>
    <string name="Explanation3">3.チャット機能でアドバイスや質問も可能</string>
    <string name="shareledger">共有家計簿</string>
    <string name="shareexpenses">共有家計簿支出登録</string>
    <string name="shareincome">共有家計簿収入登録</string>
    <string name="updateshareincome">共有家計簿収入修正</string>
    <string name="updateshareexpenses">共有家計簿支出修正</string>
    <string name="adviserlist">アドバイザ一覧</string>
    <string name="Hoashi">帆足</string>
    <string name="Evaluation">評価数：３</string>
    <string name="search">検索</string>
    <string name="LedgerChoice">入力画面</string>

    <string name="username">user</string>
    <string name="ledgername">家計簿名</string>
    <string name="ladgername">家計簿名</string>
    <string name="groupname">グループ名</string>
    <string name="userlist">ユーザ一覧</string>
    <string name="adviser">アドバイザ画面へ</string>
    <string name="advisortitle">アドバイザ</string>
    <string name="advisor1">アドバイザ申請</string>
    <string name="advisor2">会員リスト</string>
    <string name="advisorIntroduction">機能紹介</string>
    <string name="shoreledgermenu">共有家計簿メニュー</string>
    <string name="group">グループ作成</string>
    <string name="mypage">マイページ</string>
    <string name="default_notification_channel_id">1</string>
    <string name="default_notification_channel_name">cms</string>
    <string name="channel_description">説明</string>
    <string name="deleteGroup">グループ削除</string>
    <string name="advisernickname">アドバイザニックネーム</string>
    <string name="invitationgroup">グループ招待</string>
    <string name="invite">招待</string>
    <string name="ledgermenu">家計簿メニュー</string>
    <string name="newledger">家計簿作成</string>
    <string name="deleteledger">家計簿削除</string>
</resources>