<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".controller.InputSavingAmountActivity">

    <TextView
        android:id="@+id/date"
        android:layout_width="206dp"
        android:layout_height="54dp"
        android:text="@string/date"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="457dp"
        android:layout_height="77dp"
        android:background="#D7DEE6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="124dp"
            android:layout_height="50dp"
            android:text="@string/cancel"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="6dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/savingshistory "
            android:layout_width="155dp"
            android:layout_height="38dp"
            android:text="TextView"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.254"
            app:layout_constraintStart_toEndOf="@+id/cancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.589"
            tools:text="@string/spendingRegistration" />

        <Button
            android:id="@+id/save"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="124dp"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="317dp"
            tools:text="@string/spending" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="403dp"
        android:layout_height="339dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="78dp">

            <TextView
                android:id="@+id/Amountofmoney"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="TextView"
                android:textSize="24sp"
                tools:text="@string/Amountofmoney" />

            <EditText
                android:id="@+id/money"
                android:layout_width="312dp"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:ems="10"
                android:inputType="numberSigned" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/memo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="TextView"
                android:textSize="24sp"
                tools:text="@string/memo" />

            <EditText
                android:id="@+id/note"
                android:layout_width="wrap_content"
                android:layout_height="73dp"
                android:background="#00000000"
                android:ems="10"
                android:inputType="textPersonName" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />
    </TableLayout>

    <TableLayout
        android:layout_width="473dp"
        android:layout_height="101dp"
        android:background="#D7DEE6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="470dp"
            android:layout_height="128dp">


            <Button
                android:id="@+id/savebutton"
                android:layout_width="135dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#F1EFEF"
                android:text="角丸(10dp)"
                tools:text="@string/spending" />

            <Button
                android:id="@+id/tocontinue"
                android:layout_width="139dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginStart="70dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="#FFFFFF"
                android:text="角丸(10dp)"
                tools:text="@string/tocontinue" />
        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>